Revert "Revert "812 make modifier id unique per modfier""
