# src/backend_api/app/core/schemas/item_modifier.py
@@ -7,6 +7,7 @@ class _BaseItemModifier(_pydantic.BaseModel):
 
     itemId: int
     modifierId: int
+    position: int
     roll: float | None = None
 
 
