# src/frontend/openapi.json
@@ -1538,6 +1538,15 @@
               "type": "integer",
               "title": "Modifierid"
             }
+          },
+          {
+            "name": "position",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Position"
+            }
           }
         ],
         "responses": {
@@ -1792,6 +1801,15 @@
             "schema": {
               "type": "integer",
               "title": "Modifierid"
+            }
+          },
+          {
+            "name": "position",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "title": "Position"
             }
           }
         ],
@@ -2295,6 +2313,10 @@
       },
       "GroupedModifierByEffect": {
         "properties": {
+          "modifierId": {
+            "type": "integer",
+            "title": "Modifierid"
+          },
           "effect": {
             "type": "string",
             "title": "Effect"
@@ -2331,6 +2353,7 @@
         },
         "type": "object",
         "required": [
+          "modifierId",
           "effect",
           "regex",
           "static",
@@ -2341,12 +2364,12 @@
       },
       "GroupedModifierProperties": {
         "properties": {
-          "modifierId": {
+          "position": {
             "items": {
               "type": "integer"
             },
             "type": "array",
-            "title": "Modifierid"
+            "title": "Position"
           },
           "textRolls": {
             "items": {
@@ -2365,7 +2388,7 @@
         },
         "type": "object",
         "required": [
-          "modifierId",
+          "position",
           "textRolls"
         ],
         "title": "GroupedModifierProperties"
@@ -2483,6 +2506,17 @@
           "rarity": {
             "type": "string",
             "title": "Rarity"
+          },
+          "gameItemId": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Gameitemid"
           },
           "identified": {
             "type": "boolean",
@@ -2805,6 +2839,17 @@
             "type": "string",
             "title": "Rarity"
           },
+          "gameItemId": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Gameitemid"
+          },
           "identified": {
             "type": "boolean",
             "title": "Identified",
@@ -2977,6 +3022,10 @@
             "type": "integer",
             "title": "Modifierid"
           },
+          "position": {
+            "type": "integer",
+            "title": "Position"
+          },
           "roll": {
             "anyOf": [
               {
@@ -2997,6 +3046,7 @@
         "required": [
           "itemId",
           "modifierId",
+          "position",
           "createdHoursSinceLaunch"
         ],
         "title": "ItemModifier"
@@ -3011,6 +3061,10 @@
             "type": "integer",
             "title": "Modifierid"
           },
+          "position": {
+            "type": "integer",
+            "title": "Position"
+          },
           "roll": {
             "anyOf": [
               {
@@ -3031,6 +3085,7 @@
         "required": [
           "itemId",
           "modifierId",
+          "position",
           "createdHoursSinceLaunch"
         ],
         "title": "ItemModifierCreate"
@@ -3600,8 +3655,12 @@
         ],
         "title": "ModifierCreate"
       },
-      "ModifierLimitations": {
+      "ModifierLimitation": {
         "properties": {
+          "position": {
+            "type": "integer",
+            "title": "Position"
+          },
           "maxRoll": {
             "anyOf": [
               {
@@ -3637,7 +3696,10 @@
           }
         },
         "type": "object",
-        "title": "ModifierLimitations"
+        "required": [
+          "position"
+        ],
+        "title": "ModifierLimitation"
       },
       "ModifierUpdate": {
         "properties": {
@@ -3905,10 +3967,7 @@
             "anyOf": [
               {
                 "items": {
-                  "items": {
-                    "$ref": "#/components/schemas/WantedModifier"
-                  },
-                  "type": "array"
+                  "$ref": "#/components/schemas/WantedModifier"
                 },
                 "type": "array"
               },
@@ -4268,12 +4327,16 @@
           "modifierLimitations": {
             "anyOf": [
               {
-                "$ref": "#/components/schemas/ModifierLimitations"
+                "items": {
+                  "$ref": "#/components/schemas/ModifierLimitation"
+                },
+                "type": "array"
               },
               {
                 "type": "null"
               }
-            ]
+            ],
+            "title": "Modifierlimitations"
           }
         },
         "type": "object",
